fixed inconsistent loading time for dark mode

--- a/density-debris/src/styles/global.css
+++ b/density-debris/src/styles/global.css
@@ -6,10 +6,10 @@
 /* Root Variables */
 :root {
     /* Light mode styles */
-    --background-color: #ffffff;
-    --text-color: #333333;
-    --button-background-color: #ffffff;
-    --button-text-color: #333333;
+    --default-background-color: #ffffff;
+    --default-text-color: #333333;
+    --default-button-background-color: #ffffff;
+    --default-button-text-color: #333333;
     --nav-background-color: #ffffff;
 
     /* Dark mode styles */
@@ -19,6 +19,12 @@
     --dark-button-text-color: #ffffff;
     --dark-nav-background-color: #333333;
 }
+
+
+body[data-theme='dark'] {
+    --background-color: #333333;
+    --text-color: #ffffff;
+  }  
 
 /* Body Styles */
 body {
